--- a/index.html
+++ b/index.html
@@ -36,12 +36,13 @@
             </div>
                 
             <div class="col-md-6">
-                <img src="profile_picture.JPG" alt="profile picture" class="img-fluid mb-3 mt-4">
+                <img src="images/profile_picture.JPG" alt="profile picture" class="img-fluid mb-3 mt-4">
             </div>
 
         </div>
 
         <div class="row" id="experitse">
+            <h2 class="fw-bold">Expertise</h2>
             <div class="col">
                 <div class="progress mb-2">
                     <div class="progress-bar bg-success" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"
@@ -74,9 +75,10 @@
 
         <div class="row" id="projects">
             <div class="col-6">
+                <h2 class="fw-bold">Projects</h2>
                 <div class="card">
                     <div class="card-body">
-                        <img src="Stagiaires Magis 20240306_224845.jpg" alt="company profile" class="card-img-top img-fluid">
+                        <img src="images/Stagiaires Magis 20240306_224845.jpg" alt="company profile" class="card-img-top img-fluid">
                         <div class="card-title">
                             <h4>ERP MAGIS</h4>
                         </div>
